Push all config stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ElectrifEye)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ElectrifEye main.cpp Charge.cpp Charge.h Point.cpp Point.h World.cpp World.h Constants.h)
+add_executable(ElectrifEye main.cpp Charge.cpp Charge.h Point.cpp Point.h World.cpp World.h Constants.h ElectricFieldController.cpp ElectricFieldController.h PointCharge.cpp PointCharge.h GeometryController.cpp GeometryController.h)
