--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ElectrifEye)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ElectrifEye main.cpp Charge.cpp Charge.h Point.cpp Point.h World.cpp World.h Constants.h ElectricFieldController.cpp ElectricFieldController.h PointCharge.cpp PointCharge.h GeometryController.cpp GeometryController.h)
+add_executable(ElectrifEye src/main.cpp src/Charge.cpp include/ElectrifEye/Charge.h src/Point.cpp include/ElectrifEye/Point.h src/World.cpp include/ElectrifEye/World.h include/ElectrifEye/Constants.h src/ElectricFieldController.cpp include/ElectrifEye/ElectricFieldController.h src/PointCharge.cpp include/ElectrifEye/PointCharge.h src/GeometryController.cpp include/ElectrifEye/GeometryController.h)
